# cedar-demo

./: Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml
app/: Dockerfile  Pipfile  manage.py
app/hello_cedar/: settings.py  wsgi.py
deprecated/: pyproject.toml
hello_cedar/: asgi.py  settings.py  urls.py
nginx/: nginx.conf
terraform/: .terraform.lock.hcl  variables.tf
terraform/templates/: django_app.json.tpl
