[tool.poetry]
name = "cedar-demo"
version = "0.1.0"
description = "POC for the preproduction exercise"
authors = ["Matt Hoy <MattDHoy@Gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
psycopg2-binary = "^2.9.3"
docker = "^5.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
